@@ -8,6 +8,8 @@ group = 'me.bk'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '11'
 
+test.jvmArgs = ["--illegal-access=deny"]
+
 configurations {
 	compileOnly {
 		extendsFrom annotationProcessor
@@ -25,6 +27,10 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'org.springframework.security:spring-security-test'
+	testImplementation('org.springframework.boot:spring-boot-starter-test')
+
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
 
@@ -38,6 +44,8 @@ dependencies {
 	// db
 	runtimeOnly 'com.h2database:h2'
 
+	// jwt
+	implementation 'io.jsonwebtoken:jjwt:0.9.1'
 }
 
 test {
